--- a/2_ES6+/02_metodyTablicowe/Zadania/index.html
+++ b/2_ES6+/02_metodyTablicowe/Zadania/index.html
@@ -2,9 +2,9 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Zadanie</title>	
+    <title>Zadanie</title>
 </head>
 <body>
-	<script src="./main.js"></script>
+	<script src="./main2.js"></script>
 </body>
 </html>
